<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_grad"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:padding="10dp">
    </LinearLayout>

    <TextView
        android:id="@+id/appName"
        style="@style/titleStyle"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/loginSuggest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/hakgyoansimr"
        android:textSize="20sp" />

<!--    <ImageView-->
<!--        android:id="@+id/icon"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="300dp"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:src="@drawable/memoryicon3" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/subtitleStyle"
            android:text="@string/today"
            android:layout_marginLeft="30dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            />

        <Button
            android:id="@+id/todayQuestBtn"
            style="@style/buttonStyle"
            android:layout_height="80dp"
            android:text="오늘의 질문" />

        <TextView
            style="@style/subtitleStyle"
            android:text="@string/custom"
            android:layout_marginLeft="30dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            />

        <Button
            android:id="@+id/customBtn"
            style="@style/buttonStyle"
            android:text="질문 만들기" />

        <TextView
            style="@style/subtitleStyle"
            android:text="@string/self"
            android:layout_marginLeft="30dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/selfCheckBtn"
            style="@style/buttonStyle"
            android:text="자가진단" />

        <TextView
            style="@style/subtitleStyle"
            android:text="@string/cognitive"
            android:textColor="@color/white"
            android:textSize="22sp" />
        <Button
            android:id="@+id/cognitveBtn"
            style="@style/buttonStyle"
            android:text="인지훈련게임" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/loginBtn"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="로그인" />

<!--        <Button-->
<!--            android:id="@+id/joinBtn"-->
<!--            style="@style/buttonStyle"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_gravity="center"-->
<!--            android:text="회원가입" />-->
    </LinearLayout>
</LinearLayout>
